re PR target/28675 (ICE in extract_insn, at recog.c:2084 (unrecognizable insn) [arm])

./:	PR target/28675
	* reload.c (find_reloads_subreg_address): If the address was valid
	in the original mode but not in the new mode, reload the whole
	address.
testsuite/:
	PR target/28675
	* gcc.c-torture/compile/pr28675.c: New test.

From-SVN: r124212